# Eisenhower

./: CMakeLists.txt  README.md
config/: default_config.json
config/email_templates/: reminder_monday.html  reminder_sunday.html  weekly_summary.html
data/schemes/: matrix_v1.json
data/templates/: task_clustering_prompt.txt
src/cpp/: test_json.cpp
src/cpp/include/: task.h
